--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@ layout: default
 </div>
 
 <div class="footer">
-
+This site was built using the template from erictreacy/blog.erictreacy.github.io. 
 </div>
 
